--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /x64/Debug
+/.vs/Fraemwork/v16
+/Fraemwork/x64/Debug
