--- a/Fraemwork/packages.config
+++ b/Fraemwork/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="directxmesh_desktop_win10" version="2021.4.7.2" targetFramework="native" />
   <package id="directxtk_desktop_2017" version="2021.4.7.2" targetFramework="native" />
   <package id="Microsoft.XAudio2.Redist" version="1.2.4" targetFramework="native" />
 </packages>
