--- a/Fraemwork/Fraemwork.vcxproj
+++ b/Fraemwork/Fraemwork.vcxproj
@@ -166,6 +166,7 @@
     <ClInclude Include="GameComponent.h" />
     <ClInclude Include="InputDevice.h" />
     <ClInclude Include="Keys.h" />
+    <ClInclude Include="Libs.h" />
     <ClInclude Include="LightTexturedComponent.h" />
     <ClInclude Include="LightTextureGame.h" />
     <ClInclude Include="ObjLoader.h" />
