--- a/Fraemwork/Fraemwork.vcxproj.filters
+++ b/Fraemwork/Fraemwork.vcxproj.filters
@@ -122,6 +122,9 @@
     <ClInclude Include="LightTexturedComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Libs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Natvis Include="Delegates.natvis">
